# actix-server

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/api/: handler_get_users.rs  handler_post_user.rs  mod.rs  service.rs  traits.rs
src/config/: load_config.rs
src/config/environment/: local.yml
src/db/: dynamodb.rs
src/users/: create_user.rs  get_users.rs  mod.rs  service.rs  storage.rs  user_storage.rs
src/users/storage/: create.rs  get.rs  model.rs  service.rs
