[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"

serde = "1"
serde_json = "1"
serde_yaml = "0.8.23"

tokio = { version = "1", features = ["full"] }
rusoto = { version = "0.24.2" }
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"

tracing = "0.1"

mockall = "0.11.0"
