[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-files = "0.3"
actix-session = "0.4"
futures = "0.3"
async-trait = "0.1"

serde = "1"
serde_json = "1"
serde_yaml = "0.8.23"
uuid = { version = "0.4", features = ["serde", "v4"] }

tokio = { version = "1", features = ["full"] }
aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next" }
aws-smithy-http = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["rt-tokio"] } 

tracing = "0.1"

mockall = "0.11.0"

structopt = { version = "0.3", default-features = false }

